force-app/main/default/objects/User_Tracking__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <formula>DATEVALUE(Activity_Time__c)</formula>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>