force-app/main/default/objects/User_Tracking__c/fields/Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Time__c</fullName>
    <label>Activity Time</label>
    <type>DateTime</type>
</CustomField>