force-app/main/default/objects/User_Tracking__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy__c</fullName>
            </value>
            <value>
                <fullName>Policy_Claim__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Policy_Endorsement__c</fullName>
            </value>
            <value>
                <fullName>AcctSeed__Billing__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>