force-app/main/default/objects/User_Tracking__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Record_Id__c ,  Record_Name__c  , &apos;_self&apos;)</formula>
    <label>Record</label>
    <type>Text</type>
</CustomField>